sandc/test/fixtures/astRegression/shouldFail/productions/switchExpression/SwitchPseudex.sand
pub class SwitchPseudex {
    foo() {
        (
            switch val {
                else {
                    b();
                    b()
                }
            }
        )
    }
}